--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -11,3 +11,6 @@ jwt_time_expire=604800000
 #jpa
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#application
+apiPrefix=/api
