--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,10 +11,12 @@
     "@types/node": "^16.11.62",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "antd": "^4.23.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/loadable__component": "^5.13.4"
+    "@types/loadable__component": "^5.13.4",
+    "@types/styled-components": "^5.1.26"
   }
 }
