implement call api and

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.liquibase.change-log=classpath:db/db.changelog-master.xml
 spring.security.user.password=admin@12345
 jwt_secret=ntduoc@123456
 jwt_time_expire=604800000
-
+jwt_time_refresh=86400000
 #jpa
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
