implement login and set to localStograte

--- a/front-end/.env.development
+++ b/front-end/.env.development
@@ -1,3 +1,2 @@
-DOMAIN=www.example.com
-REACT_APP_FOO=$DOMAIN/foo
-REACT_APP_BAR=$DOMAIN/bar
+DOMAIN=http://localhost:8080
+REACT_APP_MAIN=$DOMAIN/api/
